cluster/ace-official/ace-event.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ace-event
  namespace: ace-official
spec:
  selector:
    matchLabels:
      app: ace-event
  template:
    metadata:
      labels:
        app: ace-event
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: ace-event
          image: quay.io/scoobydoo181/ace-event-server:latest@sha256:dc81990f54f9f1f99ba3198c336cbe50906fd8675b73f7dde35aa9ec36df39aa
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ace-event
  namespace: ace-official
spec:
  selector:
    app: ace-event
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
