cluster/ace-official/deny-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress
  namespace: ace-official
spec:
  podSelector: {}
  policyTypes:
    - Egress
